# atmosphere

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  Makefile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/dbt/: dbt_project.yml
app/dbt/profiles/: profiles.yml
app/tests/: test_m1_infrastructure_smoke.py  test_smoke.py
config/postgres/: 01-create-dbs-and-users.sh
config/redpanda/: .bootstrap.yaml  redpanda.yaml
docs/: host-prep-nvidia.md
scripts/: init.sh  up.sh
vault/decisions/JDL-65/: 20260424T0852Z-uv-workspace-declared-at-m0.md  20260424T0853Z-cuda-base-image-tag-bump.md  20260424T0853Z-ruff-only-drops-black.md  20260424T1203Z-compose-gpu-syntax.md
vault/decisions/JDL-66/: 20260424T1236Z-seaweedfs-s3-credentials-via-env-vars.md  20260424T1518Z-docker-named-volumes-for-state.md  20260424T1519Z-make-nuke-full-reset-primitive.md  20260424T1519Z-no-backups-or-dr.md  20260424T1519Z-up-sh-auto-generates-env-on-first-boot.md  20260424T1545Z-split-bring-up-into-init-sh-and-up-sh.md
vault/files/JDL-65/: .env-example.md  CONTRIBUTING-md.md  README-md.md  compose-yml.md  gitignore.md  pre-commit-config-yaml.md  prettierignore.md  pyproject-toml.md  uv-lock.md
vault/files/JDL-66/: Makefile.md  compose-yml.md  env-example.md
vault/incidents/JDL-66/: 20260424T1456Z-scout-commit-landed-on-main-during-branch-switch.md  20260424T1618Z-sigpipe-under-pipefail-in-scripts-init-sh.md  20260424T1723Z-rpk-set-flag-not-stripped-by-redpanda-v26.md  (+1 more)
vault/research/JDL-65/: nvidia-container-toolkit-cachyos.md  (+4 more)
(+21 files in other folders)
