[project]
name = "atmosphere-workspace"
version = "0.0.0"
requires-python = "==3.12.*"
description = "Atmosphere streaming lakehouse — workspace root"

[tool.uv]
package = false

[tool.uv.workspace]
members = []

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "dbt-core>=1.10,<1.11",
    "dbt-duckdb>=1.9,<1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "--import-mode=importlib"
